# paper-wiki

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: analyze.md  bio-search.md  digest.md  extract-images.md  migrate-recipe.md  migrate-sources.md  setup.md  status.md  uninstall.md  update.md  wiki-compile.md  wiki-graph.md  wiki-ingest.md  wiki-lint.md  wiki-query.md
.github/workflows/: ci.yml  test-plugin-install.yml
.omc/: project-memory.json
.omc/plans/: 00-foundation-plan.md
.omc/sessions/: f1542554-fb59-473b-b1ab-5a92e66a2fca.json
docs/: paperclip-setup.md  wiki.md
docs/example-recipes/: personal-johnny-decimal.yaml
docs/release-history/: README.md  v0.3.35.md
hooks/: README.md  ensure-env.sh  hooks.json  rc-integration.sh
lib/: bash-helpers.sh
recipes/: README.md  _defaults.yaml  biomedical-weekly.yaml  daily-arxiv.yaml  sources-only.yaml  weekly-deep-dive.yaml
references/: dataview-recipes.md  obsidian-conventions.md  release-process.md  wiki-query-ranking.md
skills/analyze/: SKILL.md
skills/bio-search/: SKILL.md
skills/digest/: SKILL.md
skills/extract-images/: SKILL.md
skills/migrate-recipe/: SKILL.md
skills/migrate-sources/: SKILL.md
skills/setup/: SKILL.md
skills/status/: SKILL.md
skills/uninstall/: SKILL.md
skills/update/: SKILL.md
skills/wiki-compile/: SKILL.md
skills/wiki-graph/: SKILL.md
skills/wiki-ingest/: SKILL.md
skills/wiki-lint/: SKILL.md
skills/wiki-query/: SKILL.md
src/paperwiki/: __init__.py  cli.py
src/paperwiki/_internal/: __init__.py  arxiv_source.py  dedup_ledger.py  health.py  http.py  legacy_vault_scan.py  locking.py  logging.py  normalize.py  paths.py  run_status.py
src/paperwiki/config/: __init__.py  config_toml.py  layout.py  recipe.py  recipe_migrations.py  secrets.py  vault_resolver.py
src/paperwiki/core/: __init__.py  errors.py  models.py  pipeline.py  properties.py  protocols.py  registry.py  templates.py
src/paperwiki/plugins/: __init__.py
tasks/: plan.md  todo.md
tests/: conftest.py  test_smoke.py
tests/fixtures/: build_synthetic_vault.py
tests/integration/: test_bundled_recipes.py  test_cli_smoke.py  test_d_s_regression_baseline.py  test_dedup_ledger_round_trip.py  test_digest_auto_chain.py  test_digest_wiki_handoff.py  test_end_to_end_digest.py  test_filters_compose.py  test_full_digest_auto_chain.py  test_rollback_round_trip.py  test_venv_migration.py  test_wiki_compile_migrate.py  test_wiki_flow.py
tests/unit/: conftest.py  skill_lint_sandbox.py  test_bash_helpers.py  test_cli.py  test_dataview_recipes_doc.py  test_obsidian_conventions_doc.py  test_obsidian_image_embeds.py  test_rc_integration.py  test_skill_bash_snippets_lint.py  test_skill_lint_sandbox.py  test_skills_md_no_legacy_venv.py
(+232 files in other folders)
